# data-pipe

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/data_pipe/: __init__.py  cli.py  core.py
tests/: test_core.py
