[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipe"
version = "0.1.0"
description = "CLI ingestion pipeline from business tools into agent-ready formats."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/data-pipe"
Issues = "https://github.com/erron-ai/data-pipe/issues"

[project.scripts]
data-pipe = "data_pipe.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
